--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ FLASK_ENV=development
 
 # Front-End Variables
 BASENAME=/
+
+
+
+BACKEND_URL=https://3001-bpmurray77-tabletopgame-mgfnih11osk.ws-us59.gitpod.io
