--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,4 @@ BASENAME=/
 
 
 
-BACKEND_URL=https://3001-bpmurray77-tabletopgame-mgfnih11osk.ws-us59.gitpod.io
+BACKEND_URL=https://3001-bpmurray77-tabletopgame-l6dn2mdrsug.ws-us59.gitpod.io/
