--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DATABASE_URL=postgresql://gitpod@localhost:5432/example
 FLASK_APP_KEY="any key works"
 FLASK_APP=src/app.py
 FLASK_ENV=development
+JWT_SECRET=8uu8wh8zh82hh2ww0
 
 # Front-End Variables
 BASENAME=/
