--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,6 +17,7 @@ tasks:
         psql -U gitpod -c 'CREATE DATABASE example;' &&
         psql -U gitpod -c 'CREATE EXTENSION unaccent;' -d example &&
         pipenv run init && 
+        pipenv run upgrade &&
         pipenv run migrate && 
         pipenv run upgrade &&
         python docs/assets/greeting.py back
